# axe-axum-static

./: Cargo.toml
src/: main.rs
