[package]
name = "axum_static"
version = "0.1.0"
edition = "2021"
authors = ["Acheul <seoul605.21@gmail.com>"]

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "array-impls"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"